--- a/app/views/bulletins/_form.html.erb
+++ b/app/views/bulletins/_form.html.erb
@@ -21,7 +21,7 @@
 
 			<div class="field"><p>
 			<%= f.label :receiver, "Destinatarios: "%>
-			<%= f.select(:receiver, [['Usuarios activos', 1],['Usuarios adherentes',2], ['Todos los usuarios',3]], {:include_blank => '-- Seleccione el tipo de usuario destinatario --' }, { :class => 'form-control', :required => true }) %></p>
+			<%= f.select(:receiver, [['Usuarios activos', 1],['Usuarios adherentes',2], ['Todos los usuarios',3]], {:include_blank => '-- Seleccione la adhesión en la red del destinatario --' }, { :class => 'form-control', :required => true }) %></p>
 			</div>
 
 			<div class="field">
