--- a/app/views/partials/_resources.html.erb
+++ b/app/views/partials/_resources.html.erb
@@ -1,13 +1,4 @@
-<div  class="panel panel-default panelClick">
-	<div class="panel-heading" data-toggle="collapse" data-target="#cuerpoRecursos">
-		Últimos recursos <i class="glyphicon glyphicon-circle-arrow-down"></i>
-	</div>
-	<div class="collapsing" id="cuerpoRecursos">
-		<div class="panel-body" id="styleSession" >
-			<% Resource.order("date DESC").take(4).each do |resource| %>
-				<p><%=l resource.date%>:  <%= truncate(resource.name, length: 15)%> - <%= link_to 'ver', resource.archive.url, :target => "_blank"%></p>
-			<%end%>
-	    	<p style="text-align: center;"><%= link_to "Ver todos", resources_muestra_path%>
-		</div>	
-	</div>
-</div>
+
+<%= link_to resources_muestra_path, :class=>'btn btnAside' do %>
+	Recursos
+<% end %>
