--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,5 +1,5 @@
 <tr>
-	<td>Experiencia</td>
-	<td><%=experience.title%></td>
-	<td><%= link_to "Ver", experience %></td>
+	<td>Experiencia Antigua</td>
+	<td><%=project.title%></td>
+	<td><%= link_to "Ver", project %></td>
 </tr>
