--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -13,6 +13,8 @@
 
 <%= link_to "Administrar estatuto", sections_estatuto_path, class:"btn btn-lg btnAdmin"%>
 
+<%= link_to "Administrar preguntas frecuentes", questions_path, class:"btn btn-lg btnAdmin"%>
+
 <h2>Intranet <button type="button" class="btn btn-default btnWhite" id:"btnAdmin2"  data-trigger="focus" data-container="body" data-toggle="btnAdmin2"> ? </button></h2>
 
 <%= link_to "Administrar instituciones", institutions_path, class:"btn btn-lg btnAdmin"%>
@@ -56,7 +58,7 @@
 	{
 		title:'Administración de los usuarios',
 		html: 'true', 
-		content: '<p>Los siguientes dos módulos estan relacionados directamente con el comportamiento de los usuarios del sitio.</p><p>El <strong>Listado de usuarios</strong>, permite modificar el rol o tipo de usuario, lo cual influye en los privilegios de estos</p><p> Los <strong>boletines</strong> permiten enviar un mail masivo, de manera sencilla a los usuarios con las actividades AS y artículos publicados en la página a partir de una fecha estipulada.</p>'
+		content: '<p>Los siguientes dos módulos estan relacionados directamente con el comportamiento de los usuarios del sitio.</p><p>El <strong>Listado de usuarios</strong>, permite modificar el rol o tipo de adhesión a la red del usuario, lo cual influye en los privilegios de estos</p><p> Los <strong>boletines</strong> permiten enviar un mail masivo, de manera sencilla a los usuarios con las actividades AS y artículos publicados en la página a partir de una fecha estipulada.</p>'
 	}
 	)
 	})
