--- a/app/views/experiences/searchExperience.html.erb
+++ b/app/views/experiences/searchExperience.html.erb
@@ -13,15 +13,26 @@
 	<%end%>
 </div>
 
-<% if @experiences.present? %>
-<div class="panel panel-default panelRease">
-	<div class="panel-heading">
-		Experiencias: <%= params[:search] %>
+
+
+<% if @experiences.present? || @projects.present? %>
+	<div class="panel panel-default panelRease">
+		<div class="panel-heading">
+			Resultados de la búsqueda: <%= params[:search] %>
+		</div>
+		<div class="panel-body">
+			<table class="tabla-rease">
+				<tr>
+					<th><strong>Tipo</strong></th>
+					<th><strong>Nombre</strong></th>
+					<th><strong>Detalles</strong></th>
+
+				</tr>
+					<%= render @experiences %>
+					<%= render @projects %>
+			</table>
+		</div>
 	</div>
-	<div class="panel-body">
-		<%= render @experiences %>
-	</div>
-</div>
 <%else%>
 <div class="panel panel-default panelRease">
 	<div class="panel-heading">
