--- a/app/views/resources/muestra.html.erb
+++ b/app/views/resources/muestra.html.erb
@@ -34,7 +34,7 @@
 					<tr>
 						<th><strong>Nombre</strong></th>
 						<th><strong>Fecha</strong></th>
-						<th><strong>Descripción</strong></th>
+
 						<th><strong>Descargar</strong></th>
 
 					</tr>
@@ -43,8 +43,9 @@
 
 						<td><%=link_to truncate(resource.name, length: 20), resource%></td>
 						<td><%=l resource.date%></td>
-						<td><%=raw resource.description.truncate(40)%></td>
-						<td><%= link_to '<center><i class="glyphicon glyphicon-circle-arrow-down"></i></center>'.html_safe, resource.archive.url, :target => "_blank"%></td>
+						<td>
+							<%= render 'extensiones', :resource => resource %>
+						</td>
 					</tr>
 					<%end%>
 				</table>
@@ -65,7 +66,7 @@
 					<tr>
 						<th><strong>Nombre</strong></th>
 						<th><strong>Fecha</strong></th>
-						<th><strong>Descripción</strong></th>
+
 						<th><strong>Descargar</strong></th>
 
 					</tr>
@@ -73,8 +74,10 @@
 					<tr>
 						<td><%=link_to truncate(resource.name, length: 25), resource%></td>
 						<td><%=l resource.date%></td>
-						<td><%=raw resource.description.truncate(60)%></td>
-						<td><%= link_to '<center><i class="glyphicon glyphicon-circle-arrow-down"></i></center>'.html_safe, resource.archive.url, :target => "_blank"%></td>
+
+						<td>
+							<%= render 'extensiones', :resource => resource %>
+						</td>
 					</tr>
 					<%end%>
 				</table>
@@ -95,7 +98,7 @@
 					<tr>
 						<th><strong>Nombre</strong></th>
 						<th><strong>Fecha</strong></th>
-						<th><strong>Descripción</strong></th>
+
 						<th><strong>Descargar</strong></th>
 
 					</tr>
@@ -103,8 +106,8 @@
 					<tr>
 						<td><%=link_to truncate(resource.name, length: 25), resource%></td>
 						<td><%=l resource.date%></td>
-						<td><%=raw resource.description.truncate(60)%></td>
-						<td><%= link_to '<center><i class="glyphicon glyphicon-circle-arrow-down"></i></center>'.html_safe, resource.archive.url, :target => "_blank"%></td>
+
+						<td><%= render 'extensiones', :resource => resource %></td>
 					</tr>
 					<%end%>
 				</table>
@@ -125,7 +128,7 @@
 					<tr>
 						<th><strong>Nombre</strong></th>
 						<th><strong>Fecha</strong></th>
-						<th><strong>Descripción</strong></th>
+
 						<th><strong>Descargar</strong></th>
 
 					</tr>
@@ -133,8 +136,8 @@
 					<tr>
 						<td><%=link_to truncate(resource.name, length: 25), resource%></td>
 						<td><%=l resource.date%></td>
-						<td><%=raw resource.description.truncate(60)%></td>
-						<td><%= link_to '<center><i class="glyphicon glyphicon-circle-arrow-down"></i></center>'.html_safe, resource.archive.url, :target => "_blank"%></td>
+
+						<td><%= render 'extensiones', :resource => resource %></td>
 					</tr>
 					<%end%>
 				</table>
@@ -155,7 +158,7 @@
 					<tr>
 						<th><strong>Nombre</strong></th>
 						<th><strong>Fecha</strong></th>
-						<th><strong>Descripción</strong></th>
+
 						<th><strong>Descargar</strong></th>
 
 					</tr>
@@ -163,8 +166,8 @@
 					<tr>
 						<td><%=link_to truncate(resource.name, length: 25), resource%></td>
 						<td><%=l resource.date%></td>
-						<td><%=raw resource.description.truncate(60)%></td>
-						<td><%= link_to '<center><i class="glyphicon glyphicon-circle-arrow-down"></i></center>'.html_safe, resource.archive.url, :target => "_blank"%></td>
+
+						<td><%= render 'extensiones', :resource => resource %></td>
 					</tr>
 					<%end%>
 				</table>
