Estandarizacion boton de editar contenido en todo el sitio. Mejora de los nombres en las rutas entregadas por los breadcrums

--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -1,2 +1,2 @@
 <h1>EDITAR Formato sitematización actividades aprendizaje servicio</h1>
-<%=render 'form', {accion:"editar"}%>
+<%=render 'form', {accion:"Actualizar"}%>
