--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -313,7 +313,7 @@ p
 	box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
 	}
 	.navbar-collapse.collapse {
-	display: none!important;
+	display: block;
 	}
 	.navbar-nav {
 	float: none!important;
