--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -3,7 +3,7 @@
 	<%= render 'form', {accion: "Aceptar"} %>
 <%elsif @service.status ==2 or @service.status == 4%>
 	<h1>Editar Servicio</h1>
-	<%= render 'form', {accion: "Editar"} %>
+	<%= render 'form', {accion: "Actualizar"} %>
 <%else%>
 	<h1>Solicitar Servicio</h1>
 	<%= render 'form', {accion: "Solicitar"} %>
