Traduccion de mensajes y breadcrums finales

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Administrar preguntas frecuentes</h1>
 <div class="buscador">
 	<%= form_tag(questions_searchQuestion_path, :method => "post",:class=>"form-inline") do %>
 	<div class="input-group">
