--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -6,7 +6,7 @@
 		<h2>Tipo: <%= @section.module %></h2>
 		<p>	<%=raw @section.body %></p>
 	</div>
-	<p>Fecha de Creacion:  <%=l section.created_at%></p>			
+	<p>Fecha de Creacion:  <%=l @section.created_at%></p>			
 </div>
 <%if user_signed_in? %>
 <%= link_to "Editar", edit_section_path( @section), :class => "btn btn-lg btnCRUD"%>
