--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Experiencia Antigua Folio N° <%=@project.id%>  </h1>
+<h1>Experiencia Reportada Folio N° <%=@project.id%>  </h1>
 <div class="panel panel-default panelRease">
   <div class="panel-heading">
     Formato sistematización actividades Aprendizaje Servicio
