--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -19,7 +19,7 @@
 
 <%= link_to "Administrar instituciones", institutions_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Administrar links de interés", interest_links_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Administrar enlaces de interés", interest_links_path, class:"btn btn-lg btnAdmin"%>
 
 <%= link_to "Administrar recursos", resources_path, class:"btn btn-lg btnAdmin"%>
 
@@ -48,7 +48,7 @@
 	{
 		title: 'Administración de la intranet',
 		html: 'true', 
-		content: '<p> Las siguientes opciones son para poder manejar el contenido de la intranet.</p><p>Cada uno de los siguientes módulos, será información la cual puede acceder cualquier usuario registrado en la red. </p><p>Las <strong>instituciones</strong> y las áreas de trabajo influirán directamente en las opciones de los formularios que hay en toda la intranet (Ofertas, Solicitudes, Servicios, Experiencias, etc) </p><p>Los <strong>recursos</strong> y los <strong>links de interés</strong> son material de apoyo multimedia dentro del sitio.</p>'
+		content: '<p> Las siguientes opciones son para poder manejar el contenido de la intranet.</p><p>Cada uno de los siguientes módulos, será información la cual puede acceder cualquier usuario registrado en la red. </p><p>Las <strong>instituciones</strong> y las áreas de trabajo influirán directamente en las opciones de los formularios que hay en toda la intranet (Ofertas, Solicitudes, Servicios, Experiencias, etc) </p><p>Los <strong>recursos</strong> y los <strong>enlaces de interés</strong> son material de apoyo multimedia dentro del sitio.</p>'
 	}
 	)
 	})
