--- a/app/views/partials/_interest_links.html.erb
+++ b/app/views/partials/_interest_links.html.erb
@@ -1,6 +1,6 @@
 <div  class="panel panel-default panelClick" >
 	<div class="panel-heading" data-toggle="collapse" data-target="#cuerpoLI">
-		Links de interés <i class="glyphicon glyphicon-circle-arrow-down"></i>
+		Enlaces de interés <i class="glyphicon glyphicon-circle-arrow-down"></i>
 	</div>
 	<div class="collapse" id="cuerpoLI">
 		<div class="panel-body">
