--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,5 +1,5 @@
 <tr>
-	<td>Experiencia Antigua</td>
+	<td>Experiencia Reportada</td>
 	<td><%=project.title%></td>
 	<td><%= link_to "Ver", project %></td>
 </tr>
