--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Experiencias de Proyectos Antiguos <button type="button" class="btn btn-default btnWhite" id:"btnExperiencia" data-trigger="focus" data-container="body" data-toggle="btnExperiencia"> ? </button></h1>
+<h1>Experiencias Reportadas <button type="button" class="btn btn-default btnWhite" id:"btnExperiencia" data-trigger="focus" data-container="body" data-toggle="btnExperiencia"> ? </button></h1>
 <div class="buscador">
   <%= form_tag(experiences_searchExperience_path, :method => "post",:class=>"form-inline") do %>
   <div class="input-group">
@@ -13,7 +13,7 @@
 </div>
 
 <%if current_user.category == 2%>
-  <%= link_to "Generar experiencia de proyecto antiguo", new_project_path, :class => 'btn btn-lg' %>
+  <%= link_to "Generar experiencia reportada", new_project_path, :class => 'btn btn-lg' %>
 <%end%>
 <%if @projects.present?%>
   <% @projects.order('created_at DESC').each do |project| %>
@@ -37,7 +37,7 @@
       Experiencias
     </div>
     <div class="panel-body">
-      <p>No hay experiencias de proyectos antiguos disponibles</p>
+      <p>No hay experiencias reportadas disponibles</p>
     </div>
   </div>
 <%end%>      
@@ -50,7 +50,7 @@
       {
         title: 'Experiencias',
         html: 'true', 
-        content: '<p>Las <strong>Experiencias</strong> son servicios activos finalizados correctamente. La cual el profesor responsable ha documentado.</p><p>Los <strong>Proyectos Antiguos</strong> son experiencias realizadas antes de la creación del sitio actual, las cuales son agregadas manualmente para poder almacenar la información de estas.</p><p><i class="glyphicon glyphicon-tags"></i> : Experiencia en la cual usted participó.</p>',
+        content: '<p>Las <strong>Experiencias</strong> son servicios activos finalizados correctamente. La cual el profesor responsable ha documentado.</p><p>Las <strong>Experiencias reportadas</strong> son experiencias realizadas antes de la creación del sitio actual, las cuales son agregadas manualmente para poder almacenar la información de estas.</p><p><i class="glyphicon glyphicon-tags"></i> : Experiencia en la cual usted participó.</p>',
         template: '<div class="popover popover-rease"><div class="arrow"></div><div class="popover-inner"><h3 class="popover-title"></h3><div class="popover-content"><p></p></div></div></div>'
       }
     )
