Cambio de contraseña de omniauth-facebook y cambio de textos, a los aprobados por la red

--- a/app/views/contact_mailer/contact_receiver.html.erb
+++ b/app/views/contact_mailer/contact_receiver.html.erb
@@ -18,7 +18,7 @@
 		<div class="panel-footer">
 			<br><br>
 			<p><strong>Red Nacional de aprendizaje servicio.</strong></p>
-			<p>coordinacion.rease@gmail.com</p>
+			<p>redrease@gmail.com</p>
 		</div>
 	</div>   
 
