--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -20,6 +20,6 @@
 	</p>
 </div>
 <div class="panel-footer">
-	<p>Se ha enviado un correo a coordinacion.rease@gmail.com y a usted con su comentario.</p>
+	<p>Se ha enviado un correo a redrease@gmail.com y a usted con su comentario.</p>
 	<p>Muchas gracias</p>
 </div>
