--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
 			<div  id="pies" class = "navbar-default pies">
 				REASE - Red Nacional de Aprendizaje Servicio
 				<br>
-				Contacto: reasechile@gmail.com
+				Contacto: redrease@gmail.com
 			</div>
 		</div>
 	</div>
