--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -15,7 +15,7 @@
 
 			<p><strong>Estado: </strong>
 			<%if @service.status == 1%>
-				Pendiendes
+				Pendiente
 			<%elsif @service.status == 3%>
 				Desistidos
 			<%end%>
