--- a/app/views/bulletin_mailer/bulletin.html.erb
+++ b/app/views/bulletin_mailer/bulletin.html.erb
@@ -9,7 +9,7 @@
 
 		<br><br>
 		<p><strong>Red Nacional de aprendizaje servicio.</strong></p>
-		<p>coordinacion.rease@gmail.com</p>
+		<p>redrease@gmail.com</p>
 
 		<p>Las actualizaciones de la página desde <strong><%=l @bulletin.start_date%></strong> han sido los siguientes:</p>
 
