--- a/app/views/contact_mailer/contact_sender.html.erb
+++ b/app/views/contact_mailer/contact_sender.html.erb
@@ -19,7 +19,7 @@
 				<br><br>
 				<p>Muchas gracias por contactarse con nostros, intentaremos contestarle a la brevedad</p><br>
 				<p><strong>Red Nacional de aprendizaje servicio.</strong></p>
-				<p>coordinacion.rease@gmail.com</p>
+				<p>redrease@gmail.com</p>
 			</div>
 		</div>   
 
