--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <h1 >¿Olvidó su contraseña?</h1>
-	<p> Ingrese su mail para recibir instrucciones de recuperación de contraseña<p>
+	<p> Ingrese su mail para recibir instrucciones de restablecimiento de contraseña<p>
 	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post }) do |f| %>
 		<%= devise_error_messages! %>
 		<div class="panel panel-default  panelRease">
