--- a/app/views/partials/_intranet.html.erb
+++ b/app/views/partials/_intranet.html.erb
@@ -16,7 +16,7 @@
 	<div class="collapsing" id="cuerpoNew">
 		<div class="panel-body" id="styleSession" >
 			<div class="form-signin">
-				<p style="text-align: center;">Sí eres nuevo en la red</p>
+				<p style="text-align: center;">Si eres nuevo en la red</p>
 				<%= link_to "Registrate aquí", new_registration_path(resource_name),:class=>"btn btn-lg btn-block", :id=>"styleSession" %>
 	    	</div>
 		</div>
