--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,7 +40,7 @@
 			</p></div>		
 
 			<div class="field"><p>
-				<%= f.label :name, "Nombres: "%>
+				<%= f.label :name, "Nombreo Completo "%>
 				<%= f.text_field :name, :placeholder => "Nombres",:class => 'form-control', :required => true  %>
 			</p></div>
 
@@ -115,7 +115,7 @@ $(function () {
   {
   	title: 'Tipo de usuario',
   	html: 'true', 
-    content: '<color='white'>><p><strong>Profesor:</strong> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de AS.</p><p><strong>Socio comunitario:</strong> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de AS, como cumplir con los acuerdos con el docente.</p><p><strong>Vinculador social: </strong> Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de AS.</p>'
+    content: '<p><strong>Profesor:</strong> Es quien imparte la asignatura y que está cargo del curso. Realiza la asignatura y sus evaluaciones correspondiente, mediante la actividad de AS.</p><p><strong>Socio comunitario:</strong> Representante de la comunidad que se beneficia de esta actividad. También tiene labores en el proceso de AS, como cumplir con los acuerdos con el docente.</p><p><strong>Vinculador social: </strong> Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de AS.</p>'
 
   }
   	)
