Corrección de error ortográfico en la ventana de registro de nuevo usuario

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,7 +40,7 @@
 			</p></div>		
 
 			<div class="field"><p>
-				<%= f.label :name, "Nombreo Completo "%>
+				<%= f.label :name, "Nombre Completo "%>
 				<%= f.text_field :name, :placeholder => "Nombres",:class => 'form-control', :required => true  %>
 			</p></div>
 
